@@ -24,6 +24,8 @@
 2008-03-17  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/colorspace.c (RGBTransformPacket): Rationalize casts for
+        improved performance.<BR>
   <LI> magick/image.c (GetImageDepth): Use table lookups to improve
         performance.
 
